_sass/_post.scss
.post-preview{
  margin: 15px 0 30px 0 ;
  padding: 0 0 30px 0;
  border-bottom: 1px dotted lighten($base-color-4, 25%);
}

.post-title{
  @include sans-serif();
  font-size: 40px;
  font-weight: 800;
  margin: 10px 0 10px 0;
}

.post{
  margin-bottom: 50px; 
  .post-title{
    margin-bottom: 30px;
    font-size: 55px;
  }
}

.post-entry,  .post-content{
  @include sans-serif();
  font-size: 18px;
}

.post-date{
  margin-right: 10px;
}

.post-info{
  margin: 5px 0 15px 0;
  color: gray;
  a{
    color: gray;
    @include transition(color 0s);
    white-space: nowrap;
  }
}

.post-footer{
  margin-top: 50px;
  padding-top: 50px;
  border-top: 1px solid $base-color-3; 
}

.post-comments-icon{
  a{
    &:hover, &:focus{
      color: $base-color-1;
    }
  }
}

